--- a/MediaQuery2/pubspec.yaml
+++ b/MediaQuery2/pubspec.yaml
@@ -1,4 +1,4 @@
-name: tab_bar_tab_view_fragment
+name: card_widget
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
